[package]
name = "bibliotheca"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Li Goldragon <li@goldragon.criome.net>"]
description = "Bibliography agent — search, retrieve, and manage source documents"

[lib]
name = "bibliotheca"
path = "src/lib.rs"

[[bin]]
name = "bibliotheca"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
